# Jogo_Bug-Hunter

./: .gitignore  BugHunter.cpp  BugHunter.vcxproj  BugHunter.vcxproj.filters  BugHunterUML.uml  BugHunterUML.~ml  BugHunterUML_apresentacao.uml  BugHunterUML_apresentacao2.uml  BugHunterUML_apresentacao2.~ml  CMakeLists.txt  COLLISION_MANAGER_IMPLEMENTATION.md  Descrições.txt  LICENSE  Objetivos  README.md  Spider_game.cpp  _Descrições.txt  _Tarefas.txt  mapa2.json  test_colisoes.cpp
_codeql_build_dir/: CMakeCache.txt  Makefile  cmake_install.cmake  jogo
src/: 2.tmx  Elemento.hpp  Ente.cpp  Ente.hpp  Entidade.cpp  Entidade.hpp  Fase.cpp  Fase.hpp  Fase_Primeira.cpp  Fase_Primeira.hpp  Fase_Segunda.cpp  Fase_Segunda.hpp  Folha.cpp  Folha.hpp  Formiga.cpp  Formiga.hpp  Formigueiro.cpp  Formigueiro.hpp  Gerenciador_Colisoes.cpp  Gerenciador_Colisoes.hpp  Gerenciador_Eventos.cpp  Gerenciador_Eventos.hpp  Gerenciador_Eventos.hppp  Gerenciador_Grafico.cpp  Gerenciador_Grafico.hpp  Grilo.cpp  Grilo.hpp  Inim_Facil.cpp  Inim_Facil.hpp  Inim_Medio.cpp  Inim_Medio.hpp  Inimigo.cpp  Inimigo.hpp  Jogador.cpp  Jogador.hpp  Jogo.cpp  Jogo.hpp  Lista.hpp  ListaEntidades.cpp  ListaEntidades.hpp  (+31 more)
x64/Debug/: BugHunter.exe.recipe  BugHunter.ilk  vc143.idb
x64/Debug/BugHunter.tlog/: BugHunter.lastbuildstate  CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
